# torchdistill

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CITATION.bib  LICENSE  MANIFEST.in  Pipfile  README.md  Readme.md  benchmarks.html  genindex.html  image_classification.py  index.html  log_visualizer.py  object_detection.py  objects.inv  package.html  params_extractor.py  projects.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: benchmarks.doctree  environment.pickle  index.doctree  package.doctree  projects.doctree  usage.doctree
.doctrees/subpkgs/: common.doctree  core.doctree  datasets.doctree  losses.doctree  misc.doctree  models.doctree  optim.doctree
.github/ISSUE_TEMPLATE/: bug-report--not-question-.md
.github/instructions/: copilot-pr_review.md
_modules/: index.html
_sources/: benchmarks.rst.txt  index.rst.txt  projects.rst.txt  usage.rst.txt
_sources/subpkgs/: core.rst.txt  (+2 more)
_static/: documentation_options.js  sitemap.xml
configs/: README.md
demo/: cifar_kd.ipynb  cifar_training.ipynb  extract_intermediate_representations.ipynb  glue_fine_tuning.ipynb  glue_finetuning_and_submission.ipynb  glue_kd_and_submission.ipynb
examples/: README.md  image_classification.py  object_detection.py  params_extractor.py  semantic_segmentation.py
src/: image_classification.py  object_detection.py
subpkgs/: common.html  core.html  datasets.html  losses.html  misc.html  models.html  optim.html
tests/: config_test.py  core_test.py  loss_test.py  registry_test.py
torchdistill/: __init__.py
(+580 files in other folders)
